--- a/LoggService.csproj
+++ b/LoggService.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5FFE844E-4674-4A69-9F18-2122C5C27BC8}</ProjectGuid>
+    <ProjectGuid>{03192810-1A87-4638-BDC2-01CCDE79E6A2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SocketAsyncServer</RootNamespace>
@@ -77,7 +77,6 @@
     <Compile Include="BufferManager.cs" />
     <Compile Include="Config\ConfigFileHandler.cs" />
     <Compile Include="Config\HostFinder.cs" />
-    <Compile Include="Core\LoggToInfluxDb.cs" />
     <Compile Include="Core\ObjAddress.cs" />
     <Compile Include="DataHolder.cs" />
     <Compile Include="DataHoldingUserToken.cs" />
@@ -103,6 +102,18 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Resource\ModbusAddress_AMF25.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\ModbusAddress_Classic.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\ModbusAddress_minit.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\ValidComApUnits.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
