--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="InfluxDB.Collector" version="1.0.0" targetFramework="net45" />
   <package id="InfluxDB.LineProtocol" version="1.0.0" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
 </packages>
