--- a/test.csproj
+++ b/test.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="InfluxDB.Collector" Version="1.1.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.0-beta1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 </Project>
