--- a/test.csproj
+++ b/test.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="MongoDB.Driver" Version="2.12.0-beta1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+
+  <ItemGroup>
+   <Content Include="Resource\*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+   </Content>
+</ItemGroup>  
+
 </Project>
